--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -338,3 +338,14 @@ a {
 		display: none;
 	}
 }
+#comment {
+	background-color: cornsilk;
+	color: darkblue;
+}
+#bigWhiteboard {
+	margin-top: auto;
+	position: absolute;
+right: 100px;
+	text-align: right;
+	padding-top: 200px;
+}
