--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -25,7 +25,7 @@
 }
 
 .button {
-	margin-left: 5%;
+	margin-left: 4%;
 	background-color: cornflowerblue;
 	padding: 0px 5px;
 	border-radius: 5px;
@@ -38,8 +38,9 @@
 }
 
 .nav {
-	margin-left: 50%;
+	margin-left: 20%;
 	display: flex;
+	height: 50px;
 }
 
 .currentButton {
@@ -284,3 +285,31 @@ margin-left: 300px;
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
+#comments {
+	height: 400px;
+	width: 500px;
+	overflow-y: scroll;
+	margin-left: 1100px;
+	margin-bottom: 2100px;
+	outline: 5px solid rgb(17, 71, 107);
+	color: black
+}
+
+#friendsPost {
+	text-align: center;
+margin-left: 200px;
+}
+#comment {
+	height: 400px;
+	width: 600px;
+	overflow-y: scroll;
+	margin-top: 30px;
+	margin-left: 500px;
+	margin-bottom: 500px;
+	outline: 5px solid rgb(17, 71, 107);
+	color: #ffff;
+	background-color:rgba(0, 0, 0, 0.05)	;
+}
+#widget {
+	margin-left: 1500px;
+}
