--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -25,7 +25,7 @@
 }
 
 .button {
-	margin-left: 4%;
+	margin-left: 2%;
 	background-color: cornflowerblue;
 	padding: 0px 5px;
 	border-radius: 5px;
@@ -34,13 +34,14 @@
 }
 
 .Button:hover {
-	color: #d13310;
+	color: #1054d1;
 }
 
 .nav {
-margin-right: 900px;
+margin-right: 35px;
+margin-top: 15px;
 text-align: center;
-	display: flex;
+	display: inline-flex;
 	height: 50px;
 }
 
@@ -111,7 +112,7 @@ text-align: center;
 	color: #ffffff;
 	font-family: 'Varela Round', sans-serif;
 	font-size: .95em;
-	padding: 7px 15px;
+	padding: 7px 10px;
 	text-decoration: none;
 	text-shadow: 0px 1px 0px #459cc4;
 }
@@ -184,7 +185,7 @@ a {
 
 .btn {
 	cursor: pointer;
-	padding: 5px 15px;
+	padding: 5px 10px;
 	background: var(--light-color);
 	color: var(--dark-color-a);
 	border: 0;
@@ -198,13 +199,7 @@ a {
 	justify-content: space-between;
 	align-items: center;
 }
-#bigWhiteboard {
-	margin-top: auto;
-	position: absolute;
-right: 100px;
-	text-align: right;
-	padding-top: 200px;
-}
+
 #comments {
 	overflow: auto
 }
@@ -233,14 +228,14 @@ body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSyst
 #messages > li { padding: 0.5rem 1rem; }
 #messages > li:nth-child(odd) { background: #efefef; }
 #bigWhiteboardBg {
-height: 600px;
+height: 550px;
 width: 2200px;
-margin-top: 250px;
-margin-left: 300px;
+margin-top: 200px;
+margin-left: 150px;
 }
 #title{
-	margin-left: 620px;
-	color: rgb(179, 179, 179)
+	margin-left: 500px;
+	color: rgb(145, 130, 206);
 }
 #resource {
 	margin-left: 100px;
@@ -312,9 +307,6 @@ margin-left: 200px;
 	color: #ffff;
 	background-color:rgba(0, 0, 0, 0.05)	;
 }
-#widget {
-	margin-left: 1500px;
-}
 #resources {
 	color: #ffff;
 	margin-top: 10px;
@@ -327,14 +319,15 @@ margin-left: 200px;
 	color: rgb(70, 189, 173)
 }
 #profile {
-	margin-left: 970px;
+	margin-left: 500px;
 	margin-bottom: 50px;
 
 }
 #profilePic {
 
-margin-top: 20px;
-margin-right: 25px;
+margin-top: 0px;
+margin-right: 10px;
+margin-left: 10px;
 
 	height: 50px;
 	width: 50px;
@@ -348,7 +341,8 @@ width: 600px;
 margin-bottom: 15px;
 }
 #journal {
-	margin-left: 200px;
+	margin-left: 150px;
+	position: fixed;
 }
 #mood {
 	margin-left: 95px;
@@ -367,7 +361,9 @@ margin-bottom: 15px;
 	overflow-y: auto;
 }
 #widget {
-	margin-left: 1475px;
+	margin-left: 75px;
+	margin-bottom: 1rem;
+	padding-bottom: 1rem;
 }
 #memo {
 	outline: 5px solid rgb(247, 250, 252);
@@ -384,7 +380,7 @@ margin-bottom: 15px;
 	margin-bottom: 19px;
 }
 #ideas {
-	margin-left: 1000px;
+	margin-left: 700px;
 }
 #entryWidget {
 	margin-left: 50px;
