--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -25,7 +25,7 @@
 }
 
 .button {
-	margin-left: 2%;
+	margin-left: 4%;
 	background-color: cornflowerblue;
 	padding: 0px 5px;
 	border-radius: 5px;
@@ -34,14 +34,13 @@
 }
 
 .Button:hover {
-	color: #1054d1;
+	color: #d13310;
 }
 
 .nav {
-margin-right: 35px;
-margin-top: 15px;
+margin-right: 900px;
 text-align: center;
-	display: inline-flex;
+	display: flex;
 	height: 50px;
 }
 
@@ -73,7 +72,7 @@ text-align: center;
 }
 
 .wrap {
-	width: 450px;
+	width: 1450px;
 	margin: 0 40%;
 }
 
@@ -112,7 +111,7 @@ text-align: center;
 	color: #ffffff;
 	font-family: 'Varela Round', sans-serif;
 	font-size: .95em;
-	padding: 7px 10px;
+	padding: 7px 15px;
 	text-decoration: none;
 	text-shadow: 0px 1px 0px #459cc4;
 }
@@ -185,7 +184,7 @@ a {
 
 .btn {
 	cursor: pointer;
-	padding: 5px 10px;
+	padding: 5px 15px;
 	background: var(--light-color);
 	color: var(--dark-color-a);
 	border: 0;
@@ -199,7 +198,13 @@ a {
 	justify-content: space-between;
 	align-items: center;
 }
-
+#bigWhiteboard {
+	margin-top: auto;
+	position: absolute;
+right: 100px;
+	text-align: right;
+	padding-top: 200px;
+}
 #comments {
 	overflow: auto
 }
@@ -228,14 +233,14 @@ body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSyst
 #messages > li { padding: 0.5rem 1rem; }
 #messages > li:nth-child(odd) { background: #efefef; }
 #bigWhiteboardBg {
-height: 550px;
+height: 600px;
 width: 2200px;
-margin-top: 200px;
-margin-left: 150px;
+margin-top: 250px;
+margin-left: 300px;
 }
 #title{
-	margin-left: 500px;
-	color: rgb(145, 130, 206);
+	margin-left: 620px;
+	color: rgb(179, 179, 179)
 }
 #resource {
 	margin-left: 100px;
@@ -284,12 +289,12 @@ margin-left: 150px;
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
 #comments {
 	height: 400px;
-	width: 500px;
-	overflow-y: scroll;
-	margin-left: 1100px;
-	margin-bottom: 2100px;
-	outline: 5px solid rgb(17, 71, 107);
-	color:#ffff
+	width: 600px;
+	margin-top: 30px;
+
+	outline: 5px solid rgb(23, 21, 150);
+	color:rgba(255, 252, 62, 0.966);
+
 }
 
 #friendsPost {
@@ -304,8 +309,11 @@ margin-left: 200px;
 	margin-left: 500px;
 	margin-bottom: 500px;
 	outline: 5px solid rgb(17, 71, 107);
-	color: #ffff;
+	color: rgb(10, 10, 10);
 	background-color:rgba(0, 0, 0, 0.05)	;
+}
+#widget {
+	margin-left: 1500px;
 }
 #resources {
 	color: #ffff;
@@ -319,16 +327,14 @@ margin-left: 200px;
 	color: rgb(70, 189, 173)
 }
 #profile {
-	margin-left: 500px;
+	margin-left: 970px;
 	margin-bottom: 50px;
 
 }
 #profilePic {
 
-margin-top: 0px;
-margin-right: 10px;
-margin-left: 10px;
 
+margin-left: 20px;
 	height: 50px;
 	width: 50px;
 }
@@ -341,8 +347,7 @@ width: 600px;
 margin-bottom: 15px;
 }
 #journal {
-	margin-left: 150px;
-	position: fixed;
+	margin-left: 200px;
 }
 #mood {
 	margin-left: 95px;
@@ -360,11 +365,7 @@ margin-bottom: 15px;
 	color:#ffffff;
 	overflow-y: auto;
 }
-#widget {
-	margin-left: 75px;
-	margin-bottom: 1rem;
-	padding-bottom: 1rem;
-}
+
 #memo {
 	outline: 5px solid rgb(247, 250, 252);
 }
@@ -380,8 +381,20 @@ margin-bottom: 15px;
 	margin-bottom: 19px;
 }
 #ideas {
-	margin-left: 700px;
+	margin-left: 1000px;
 }
+
+
+
 #entryWidget {
 	margin-left: 50px;
+}
+#widget {
+position: absolute;
+height: 50px;
+width: 50px;
+margin-bottom: 10px
+}
+#mainFeed {
+margin-right: 640px;
 }
