--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -245,19 +245,19 @@ body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSyst
 #messages > li:nth-child(odd) { background: #efefef; }
 #bigWhiteboardBg {
 height: 550px;
-margin-top: 250px;
-margin-left: 210px;
+margin-top: 175px;
+margin-left: 150px;
 
 }
 #title{
-	margin-left: 620px;
+	margin-left: 525px;
 	color: rgb(157, 82, 219)
 }
 #resource {
 	margin-left: 100px;
 	padding-top: 10px;
 	overflow-y: auto;
-	height:800px;
+	height:600px;
 	width: 550px;
 }
 /* Dropdown Button */
@@ -333,7 +333,7 @@ color: white;
 #resources {
 	color: #ffff;
 	margin-top: 10px;
-	height: 30px;
+	height: 20px;
 
 	margin-bottom: 10px;
 }
@@ -388,10 +388,11 @@ margin-bottom: 15px;
 }
 .likedQuotes {
 	outline: 5px solid rgb(247, 250, 252);
-	margin-top: 100px;
-	overflow-y: scroll;
-	height: 500px;
-	width: 450px;
+	margin-top: 20px;
+	margin-left: 30px;
+	overflow: auto;
+	height: 225px;
+	width: 300px;
 }
 #lq {
 	outline: 5px solid rgb(247, 250, 252);
@@ -401,7 +402,12 @@ margin-bottom: 15px;
 	margin-left: 1000px;
 }
 
-
+.memoryEntry {
+	color: white;
+	font-family: 'Roboto', sans-serif;
+	text-align: center;
+	margin-left: 200px;
+}
 
 #entryWidget {
 	margin-left: 50px;
@@ -414,4 +420,8 @@ margin-bottom: 10px
 }
 #mainFeed {
 margin-right: 640px;
+}
+
+#memoryPost {
+	margin-left: 350px;
 }
